--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,23 @@ jobs:
       - name: Download Syft
         uses: anchore/sbom-action/download-syft@v0
 
+      - uses: docker/setup-qemu-action@v2
+
+      - uses: docker/setup-buildx-action@v2
+
+      - name: DockerHub Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.GH_DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.GH_DOCKER_HUB_PASSWORD }}
+
+      - name: GHCR Login
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
@@ -66,3 +83,26 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_GORELEASER }}
           FURY_TOKEN: ${{ secrets.GH_FURY_TOKEN }}
           AUR_KEY: ${{ secrets.GH_AUR_KEY }}
+
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.GH_DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.GH_DOCKER_HUB_PASSWORD }}
+          repository: "purpleclay/imds-mock"
+          short-description: "Mock the Amazon Instance Metadata Service (IMDS) for EC2"
+          readme-filepath: ./README.md
+
+      - name: Trivy Vulnerability Scan
+        uses: aquasecurity/trivy-action@0.5.0
+        with:
+          image-ref: ghcr.io/purpleclay/imds-mock:latest
+          format: template
+          template: "@/contrib/sarif.tpl"
+          output: trivy-results.sarif
+          severity: CRITICAL,HIGH
+
+      - name: Upload Trivy Scan Results
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: trivy-results.sarif
