--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
       contents: read
       id-token: write
       packages: write
+      security-events: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
