--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
             ./Taskfile.yaml
             ./.github/workflows/**
             ./CODE_OF_CONDUCT.md
+            ./pkg/imds/middleware/v2.go
             ./pkg/imds/middleware/v2_test.go
 
       - name: Code Coverage
