--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,13 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    labels:
+      - "dependabot"
+      - "pinned"
+    commit-message:
+      prefix: "feat"
+      include: "scope"
