--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -65,7 +65,7 @@ jobs:
 
       - uses: docker/setup-qemu-action@v2
 
-      - uses: docker/setup-buildx-action@
+      - uses: docker/setup-buildx-action@v2
 
       - name: Build Image
         uses: docker/build-push-action@v3
