try this instead

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,8 @@ on:
   pull_request:
     paths:
       - "Dockerfile"
+env:
+  BUILD_TAG: imds-mock:test
 jobs:
   docker-image:
     runs-on: ubuntu-latest
@@ -72,14 +74,15 @@ jobs:
         with:
           context: .
           push: false
-          tags: imds-mock:latest
+          load: true
+          tags: ${{ env.BUILD_TAG }}
 
       - run: docker image ls
 
       - name: Trivy Vulnerability Scan
         uses: aquasecurity/trivy-action@0.7.1
         with:
-          image-ref: imds-mock:latest
+          image-ref: ${{ env.BUILD_TAG }}
           format: table
           exit-code: 1
           severity: CRITICAL,HIGH
