--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,33 +18,22 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-name: ci
+name: docker-image
 on:
   push:
     branches:
       - main
     paths:
-      - "**.go"
-      - "go.mod"
-      - "go.sum"
+      - "Dockerfile"
   pull_request:
     paths:
-      - "**.go"
-      - "go.mod"
-      - "go.sum"
+      - "Dockerfile"
+env:
+  BUILD_TAG: imds-mock:${{ github.sha }}
 jobs:
-  ci:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+  docker-image:
+    runs-on: ubuntu-latest
     steps:
-      - name: Set Git Line Endings
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-        if: matrix.os == 'windows-latest'
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -68,37 +57,32 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Test
-        run: task test
-
       - name: Build
         run: task build
 
-      # All static checks from this point should run on linux as it is the
-      # fastest platform
-      - name: Lint Code
-        if: matrix.os == 'ubuntu-latest'
-        uses: golangci/golangci-lint-action@v3.2.0
+      - name: Lint Dockerfile
+        uses: hadolint/hadolint-action@v2.1.0
         with:
-          skip-go-installation: true
-          version: v1.47.2
+          dockerfile: Dockerfile
 
-      - name: misspell
-        if: matrix.os == 'ubuntu-latest'
-        uses: reviewdog/action-misspell@v1
+      - uses: docker/setup-qemu-action@v2
+
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Build Image
+        uses: docker/build-push-action@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          locale: "UK"
-          exclude: |
-            ./go.mod
-            ./go.sum
-            ./.goreleaser.yml
-            ./Taskfile.yaml
-            ./.github/workflows/**
-            ./CODE_OF_CONDUCT.md
-            ./pkg/imds/middleware/v2.go
-            ./pkg/imds/middleware/v2_test.go
+          context: .
+          push: false
+          load: true
+          tags: ${{ env.BUILD_TAG }}
 
-      - name: Code Coverage
-        if: matrix.os == 'ubuntu-latest'
-        uses: codecov/codecov-action@v3
+      - run: docker image ls
+
+      - name: Trivy Vulnerability Scan
+        uses: aquasecurity/trivy-action@0.7.1
+        with:
+          image-ref: ${{ env.BUILD_TAG }}
+          format: table
+          exit-code: 1
+          severity: CRITICAL,HIGH
