--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
   - Home: index.md
   - Getting Started:
       - Installation: install.md
-      - On Demand Instance: configure/on-demand.md
+      - On-Demand Instance: configure/on-demand.md
       - IMDSv2: configure/imds-v2.md
       - Instance Tags: configure/instance-tags.md
       - Spot Instance: configure/spot.md
