--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -277,5 +277,6 @@ release:
 
     ## What to do next?
 
+    - Read the [documentation](https://purpleclay.github.io/imds-mock/)
     - Follow me on [Twitter](https://twitter.com/purpleclaydev)
     - Read an article on [Medium](https://medium.com/@purpleclay)
