--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -277,6 +277,6 @@ release:
 
     ## What to do next?
 
-    - Read the [documentation](https://purpleclay.dev/docs/imds-mock/)
+    - Read the [documentation](https://docs.purpleclay.dev/imds-mock/)
     - Follow me on [Twitter](https://twitter.com/purpleclaydev)
     - Read an article on [Medium](https://medium.com/@purpleclay)
