--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,7 @@ extra:
           data: 0
           note: >-
             Thanks for your feedback! Help us improve this page by
-            using our <a href="https://forms.gle/LfBReL2MUPnwUve6A" target=_blank>feedback form</a>.
+            using our <a href="https://forms.gle/8RAKz3nnWXF7NmW29" target=_blank>feedback form</a>.
   status:
     new: New Feature
     deprecated: No Longer Supported
