--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -74,11 +74,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_MKDOCS }}
           GH_GOOGLE_ANALYTICS_KEY: ${{ secrets.GH_GOOGLE_ANALYTICS_KEY }}
 
-      - name: HTML Test
-        uses: wjdp/htmltest-action@master
-        with:
-          path: site
-          config: htmltest.yml
+      # - name: HTML Test
+      #   uses: wjdp/htmltest-action@master
+      #   with:
+      #     path: site
+      #     config: htmltest.yml
 
       - name: Deploy documentation
         if: startsWith(github.ref, 'refs/tags/v')
@@ -89,14 +89,14 @@ jobs:
           mkdocs gh-deploy --force
           mkdocs --version
 
-      - name: Set Custom Domain
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: octokit/request-action@v2.x
-        id: pages_domain
-        with:
-          route: PUT /repos/{owner}/{repo}/pages
-          owner: purpleclay
-          repo: imds-mock
-          cname: docs.purpleclay.dev/imds-mock
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Set Custom Domain
+      #   if: startsWith(github.ref, 'refs/tags/v')
+      #   uses: octokit/request-action@v2.x
+      #   id: pages_domain
+      #   with:
+      #     route: PUT /repos/{owner}/{repo}/pages
+      #     owner: purpleclay
+      #     repo: imds-mock
+      #     cname: docs.purpleclay.dev
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
