--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -74,11 +74,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_MKDOCS }}
           GH_GOOGLE_ANALYTICS_KEY: ${{ secrets.GH_GOOGLE_ANALYTICS_KEY }}
 
-      # - name: HTML Test
-      #   uses: wjdp/htmltest-action@master
-      #   with:
-      #     path: site
-      #     config: htmltest.yml
+      - name: HTML Test
+        uses: wjdp/htmltest-action@master
+        with:
+          path: site
+          config: htmltest.yml
 
       - name: Deploy documentation
         if: startsWith(github.ref, 'refs/tags/v')
