--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -80,11 +80,22 @@ jobs:
           path: site
           config: htmltest.yml
 
+      - name: Patch mkdocs.yml
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: mkdocs.yml
+          propertyPath: site_url
+          value: https://docs.purpleclay.dev/imds-mock/
+          commitChange: false
+          updateFile: true
+
+      - run: cat mkdocs.yml
+
       - name: Deploy documentation
         if: startsWith(github.ref, 'refs/tags/v')
         env:
           GH_TOKEN: ${{ secrets.GH_MKDOCS }}
           GH_GOOGLE_ANALYTICS_KEY: ${{ secrets.GH_GOOGLE_ANALYTICS_KEY }}
         run: |
+          mkdocs build
           mkdocs gh-deploy --force
-          mkdocs --version
