--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -74,11 +74,20 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_MKDOCS }}
           GH_GOOGLE_ANALYTICS_KEY: ${{ secrets.GH_GOOGLE_ANALYTICS_KEY }}
 
-      # - name: HTML Test
-      #   uses: wjdp/htmltest-action@master
-      #   with:
-      #     path: site
-      #     config: htmltest.yml
+      - name: HTML Test
+        uses: wjdp/htmltest-action@master
+        with:
+          path: site
+          config: htmltest.yml
+
+      - name: Patch mkdocs.yml
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: 'site_url: ""'
+          replace: 'site_url: "https://docs.purpleclay.dev/${{ github.event.repository.name }}/"'
+          regex: false
+          include: mkdocs.yml
 
       - name: Deploy documentation
         if: startsWith(github.ref, 'refs/tags/v')
@@ -86,17 +95,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_MKDOCS }}
           GH_GOOGLE_ANALYTICS_KEY: ${{ secrets.GH_GOOGLE_ANALYTICS_KEY }}
         run: |
+          mkdocs build
           mkdocs gh-deploy --force
-          mkdocs --version
-
-      # - name: Set Custom Domain
-      #   if: startsWith(github.ref, 'refs/tags/v')
-      #   uses: octokit/request-action@v2.x
-      #   id: pages_domain
-      #   with:
-      #     route: PUT /repos/{owner}/{repo}/pages
-      #     owner: purpleclay
-      #     repo: imds-mock
-      #     cname: docs.purpleclay.dev
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
